# clovece_nehneva_sa_server

./: CMakeLists.txt  server.cpp
char_buffer/: char_buffer.cpp  char_buffer.h
doska/: doska.cpp  doska.h
sockets/: active_socket.cpp  active_socket.h  passive_socket.cpp  passive_socket.h
